# MyxoBacteria

./: Bacteria.cpp  Bacteria.h  Bacteria.hpp  CMakeLists.txt  ConfigParser.cpp  ConfigParser.h  Diffusion2D.cpp  Diffusion2D.hpp  Fungi.cpp  Fungi.hpp  Grid.cpp  Grid.hpp  MyxoBacteriaRun.sh  Nodes.cpp  Nodes.h  Nodes.hpp  SignalCommon.cpp  SignalCommon.hpp  TissueBacteria.cpp  TissueBacteria.hpp  TissueGrid.cpp  TissueGrid.hpp  build_Bacteria.sh  build_MyxoBacteria.sh  commonData.h  constants.cpp  constants.h  driver.cpp  driver.h  growthFunctions.cpp  growthFunctions.h  hyphaeSegment.cpp  hyphaeSegment.h  hyphal_coordinates4.444444444444445.txt  hyphal_coordinates40.888888888888886.txt  main.cpp  makefile  ranum.h  ranum2.cpp  ranum2.h
fungalModel_static/: Makefile  README.md  bash_make.sh  bash_module.sh  driver
resources/: bacteria_M.cfg  test1.cfg  test2.cfg  test3.cfg  test4.cfg  test5.cfg  test6.cfg
src/: Bacteria.cpp  CMakeLists.txt
untitled folder/: Bacteria.cpp  Bacteria.hpp  Diffusion2D.cpp  Diffusion2D.hpp  Grid.cpp  Nodes.hpp  TissueBacteria.cpp  TissueBacteria.hpp  TissueGrid.cpp  TissueGrid.hpp  main.cpp  ranum2.h
